Tweak designs of check-in modal to avoid linewrap (#9826)

--- a/static/css/components/read-panel.less
+++ b/static/css/components/read-panel.less
@@ -16,7 +16,6 @@
 
 .read-options,
 .Tools .btn-notice {
-  line-height: 1.5em;
   font-size: 1em;
   padding: 15px;
   margin-bottom: 10px;
@@ -35,7 +34,7 @@
     text-decoration: none;
     position: relative;
     margin-top: -15px; // offsets Illustration margin-bottom: 10px
-    margin-bottom: 0;
+    margin-bottom: 5px;
     padding: 5px 20px 10px; // Increasing click area for mobile text link
     background-color: transparent;
 
